# knitportal

./: README.md  pyproject.toml  pyvenv.cfg  requirements.txt  sql_app.db
knitportal/: main.py
knitportal/db/: crud.py  database.py  models.py  schemas.py
knitportal/routers/: products.py  scrape.py
knitportal/scrapers/: base.py  wollplatz.py
migrations/: env.py
migrations/versions/: 3090a462853d_create_inital_tables.py
tests/: test_main.py
tests/scrapers/: test_base.py
