[tool.poetry]
name = "knitportal"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.12"
alembic = "^1.10.4"
httpx = "^0.24.0"
selenium = "^4.9.1"

[tool.poetry.scripts]
start = "knitportal.main:start"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
